<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="7dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="7dp"
    android:layout_marginBottom="2dp"
    android:background="#3EB489">

    <TextView
        android:id="@+id/NoteHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/note1" />

    <TextView
        android:id="@+id/DateModified"
        android:layout_width="170dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoteHeader"
        tools:text="@string/date" />

    <TextView
        android:id="@+id/Notes"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/NoteHeader"
        app:layout_constraintStart_toStartOf="@+id/NoteHeader"
        app:layout_constraintTop_toBottomOf="@+id/NoteHeader"
        tools:text="@string/notecontent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="385dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Notes" />
</androidx.constraintlayout.widget.ConstraintLayout>